<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.FirstFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_blue"
        >
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_dashboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:fontFamily="@font/figtree_semi_bold"
            android:textSize="24sp"
            android:layout_marginStart="20dp"
            android:text="@string/dashboard"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_frame_dashboard"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_dashboard"
            app:layout_constraintBottom_toBottomOf="@id/tv_dashboard"
            />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="100dp"
            android:background="@drawable/ic_home_background_custom"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            >
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_good_morning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:fontFamily="@font/figtree_regular"
                android:textSize="16sp"
                android:layout_marginStart="20dp"
                android:text="@string/good_morning"
                android:textColor="@color/light_grey"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:fontFamily="@font/figtree_semi_bold"
                android:textSize="24sp"
                android:layout_marginStart="20dp"
                android:text="Ajay Manva"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_good_morning"
                />
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_marginStart="5dp"
                android:src="@drawable/ic_hand_image"
                app:layout_constraintTop_toTopOf="@id/tv_name"
                app:layout_constraintBottom_toBottomOf="@id/tv_name"
                app:layout_constraintStart_toEndOf="@id/tv_name"
                />
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_graph"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_14sdp"
                android:padding="12dp"
                android:layout_marginHorizontal="20dp"
                android:background="@drawable/bg_clicks_white"
                app:layout_constraintTop_toBottomOf="@id/tv_name"
                >
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_overview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:fontFamily="@font/figtree_regular"
                    android:textSize="14sp"
                    android:text="@string/overview"
                    android:textColor="@color/light_grey"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/calender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingVertical="10dp"
                    android:paddingHorizontal="@dimen/_7sdp"
                    android:drawablePadding="8dp"
                    android:fontFamily="@font/figtree_regular"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:text="22 Aug - 23 Sept"
                    android:background="@drawable/bg_analytics"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:drawableEnd="@drawable/ic_clock"
                    app:layout_constraintTop_toTopOf="parent"
                    />
                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/line_chart"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_130sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    app:layout_constraintTop_toBottomOf="@id/calender"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_clicks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                tools:itemCount="2"
                tools:listitem="@layout/item_clicks_horizontal"
                app:layout_constraintTop_toBottomOf="@id/cl_graph"
                />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/view_analytics"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingVertical="14dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/figtree_semi_bold"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_marginHorizontal="20dp"
                android:text="@string/view_analytics"
                android:background="@drawable/bg_analytics"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_clicks"
                />
            <androidx.constraintlayout.widget.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/guideline"
                app:layout_constraintGuide_percent="0.5"
                />
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_price_boost"
                android:layout_marginEnd="@dimen/_50sdp"
                app:layout_constraintTop_toTopOf="@id/view_analytics"
                app:layout_constraintBottom_toBottomOf="@id/view_analytics"
                app:layout_constraintEnd_toStartOf="@id/guideline"
                />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_top_links"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingVertical="8dp"
                android:paddingHorizontal="14dp"
                android:drawablePadding="8dp"
                android:layout_marginTop="35dp"
                android:fontFamily="@font/figtree_semi_bold"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:layout_marginHorizontal="20dp"
                android:text="@string/top_links"
                android:background="@drawable/bg_links_selected"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view_analytics"
                />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_recent_links"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingVertical="8dp"
                android:paddingHorizontal="14dp"
                android:drawablePadding="8dp"
                android:layout_marginTop="35dp"
                android:fontFamily="@font/figtree_semi_bold"
                android:textSize="16sp"
                android:textColor="@color/light_grey"
                android:layout_marginHorizontal="10dp"
                android:text="@string/recent_links"
                app:layout_constraintStart_toEndOf="@id/tv_top_links"
                app:layout_constraintTop_toBottomOf="@id/view_analytics"
                />
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:src="@drawable/ic_input_container"
                app:layout_constraintTop_toTopOf="@id/tv_top_links"
                app:layout_constraintBottom_toBottomOf="@id/tv_top_links"
                app:layout_constraintEnd_toEndOf="parent"
                />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_links_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                tools:itemCount="2"
                android:layout_marginHorizontal="20dp"
                tools:listitem="@layout/item_links_details"
                app:layout_constraintTop_toBottomOf="@id/tv_top_links"
                />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/view_all_links"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingVertical="14dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/figtree_semi_bold"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_marginHorizontal="20dp"
                android:text="@string/view_all_links"
                android:background="@drawable/bg_analytics"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_links_details"
                />
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_home_link"
                android:layout_marginEnd="@dimen/_50sdp"
                app:layout_constraintTop_toTopOf="@id/view_all_links"
                app:layout_constraintBottom_toBottomOf="@id/view_all_links"
                app:layout_constraintEnd_toStartOf="@id/guideline"
                />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/talk_with_us"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingVertical="20dp"
                android:drawablePadding="16dp"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/figtree_semi_bold"
                android:textSize="16sp"
                android:paddingHorizontal="15dp"
                android:textColor="@color/black"
                android:layout_marginHorizontal="20dp"
                android:text="@string/talk_with_us"
                android:background="@drawable/bg_talk_with_us"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:drawableStart="@drawable/ic_whattsapp"
                app:layout_constraintTop_toBottomOf="@id/view_all_links"
                />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/asked_questions"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingVertical="20dp"
                android:drawablePadding="16dp"
                android:paddingHorizontal="15dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/figtree_semi_bold"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_marginHorizontal="20dp"
                android:text="@string/frequently_asked_questions"
                android:background="@drawable/bg_asked_questions"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:drawableStart="@drawable/ic_questions"
                app:layout_constraintTop_toBottomOf="@id/talk_with_us"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="60dp"
                app:layout_constraintTop_toBottomOf="@id/asked_questions"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>